--- a/TP5_generation_matrice_elementaire.ipynb
+++ b/TP5_generation_matrice_elementaire.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -27,16 +27,16 @@
      "output_type": "stream",
      "text": [
       "[[0. 0. 0. 0.]\n",
-      " [3. 0. 0. 0.]\n",
-      " [4. 7. 0. 0.]\n",
-      " [8. 7. 3. 0.]]\n",
-      "[[6. 0. 0. 0.]\n",
-      " [0. 9. 0. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 0. 6.]]\n",
-      "[[0. 5. 9. 9.]\n",
-      " [0. 0. 7. 5.]\n",
-      " [0. 0. 0. 3.]\n",
+      " [4. 0. 0. 0.]\n",
+      " [9. 3. 0. 0.]\n",
+      " [7. 5. 7. 0.]]\n",
+      "[[2. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [0. 0. 3. 0.]\n",
+      " [0. 0. 0. 2.]]\n",
+      "[[0. 5. 7. 4.]\n",
+      " [0. 0. 5. 9.]\n",
+      " [0. 0. 0. 7.]\n",
       " [0. 0. 0. 0.]]\n"
      ]
     }
@@ -72,17 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[60 99]\n",
-      " [25 29]]\n",
-      "[[60 99]\n",
-      " [25 29]]\n"
+      "[[27 34]\n",
+      " [20 30]]\n",
+      "[[27 34]\n",
+      " [20 30]]\n"
      ]
     }
    ],
@@ -102,14 +102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.8 µs ± 232 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "88.3 µs ± 27.1 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -119,14 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "473 ns ± 6.07 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "4.49 µs ± 1.5 µs per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
@@ -161,23 +161,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1., 0., 0., 0.],\n",
-       "       [0., 1., 0., 0.],\n",
-       "       [0., 3., 1., 0.],\n",
-       "       [0., 0., 0., 1.]])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def T(i, j, n):\n",
     "    assert i <= n and j <= n\n",
@@ -196,13 +182,14 @@
     "    return A\n",
     "\n",
     "def L(alpha, i, j, n):\n",
-    "    assert i <= n and j <= n\n",
+    "    assert i < n and j < n\n",
     "    A = np.eye(n)\n",
-    "    i, j = i-1, j-1\n",
+    "    # i, j = i-1, j-1\n",
     "    A [i, j] = alpha\n",
     "    return (A)\n",
     "\n",
-    "L(3, 3, 2, 4)"
+    "\n",
+    "\n"
    ]
   },
   {
@@ -215,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +211,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +241,7 @@
        "False"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +271,7 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -350,62 +337,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[3 2 8 9]\n",
-      " [8 4 4 1]\n",
-      " [9 2 7 2]\n",
-      " [2 4 1 1]]\n"
+      "[[4 3 2 6]\n",
+      " [6 7 2 6]\n",
+      " [2 9 8 7]\n",
+      " [2 6 8 8]]\n"
      ]
     }
    ],
    "source": [
     "A = np.random.randint(1, 10, (4, 4))\n",
+    "\n",
     "print(A)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(array([[ 1.        ,  0.        ,  0.        ,  0.        ],\n",
-      "       [-2.66666667,  1.        ,  0.        ,  0.        ],\n",
-      "       [-3.        ,  0.        ,  1.        ,  0.        ],\n",
-      "       [-0.66666667,  0.        ,  0.        ,  1.        ]]), array([[1.        , 0.        , 0.        , 0.        ],\n",
-      "       [2.66666667, 1.        , 0.        , 0.        ],\n",
-      "       [3.        , 0.        , 1.        , 0.        ],\n",
-      "       [0.66666667, 0.        , 0.        , 1.        ]]))\n",
-      "(array([[ 1. ,  0. ,  0. ,  0. ],\n",
-      "       [ 0. ,  1. ,  0. ,  0. ],\n",
-      "       [ 0. , -0.5,  1. ,  0. ],\n",
-      "       [ 0. , -1. ,  0. ,  1. ]]), array([[1. , 0. , 0. , 0. ],\n",
-      "       [0. , 1. , 0. , 0. ],\n",
-      "       [0. , 0.5, 1. , 0. ],\n",
-      "       [0. , 1. , 0. , 1. ]]))\n",
-      "(array([[ 1.        ,  0.        ,  0.        ,  0.        ],\n",
-      "       [ 0.        ,  1.        ,  0.        ,  0.        ],\n",
-      "       [ 0.        ,  0.        ,  1.        ,  0.        ],\n",
-      "       [ 0.        ,  0.        , -0.14285714,  1.        ]]), array([[1.        , 0.        , 0.        , 0.        ],\n",
-      "       [0.        , 1.        , 0.        , 0.        ],\n",
-      "       [0.        , 0.        , 1.        , 0.        ],\n",
-      "       [0.        , 0.        , 0.14285714, 1.        ]]))\n",
-      "(array([[1., 0., 0., 0.],\n",
-      "       [0., 1., 0., 0.],\n",
-      "       [0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 1.]]), array([[1., 0., 0., 0.],\n",
-      "       [0., 1., 0., 0.],\n",
-      "       [0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 1.]]))\n"
+     "ename": "IndexError",
+     "evalue": "index 0 is out of bounds for axis 0 with size 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 14\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m A, Ap\n\u001b[1;32m     13\u001b[0m r \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m3\u001b[39m \u001b[38;5;66;03m# ligne 1 index 0\u001b[39;00m\n\u001b[0;32m---> 14\u001b[0m Mdk \u001b[38;5;241m=\u001b[39m \u001b[43mMr\u001b[49m\u001b[43m(\u001b[49m\u001b[43mA\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[43mA\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m \n",
+      "Cell \u001b[0;32mIn[4], line 30\u001b[0m, in \u001b[0;36mMr\u001b[0;34m(M, r, n)\u001b[0m\n\u001b[1;32m     28\u001b[0m Ap \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39meye(n)\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(r, n):\n\u001b[0;32m---> 30\u001b[0m     A \u001b[38;5;241m=\u001b[39m A\u001b[38;5;129m@L\u001b[39m(\u001b[38;5;241m-\u001b[39m\u001b[43mlambda_list\u001b[49m\u001b[43m[\u001b[49m\u001b[43mrow\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43mr\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241m/\u001b[39mM[r, r], row, r, n)\n\u001b[1;32m     31\u001b[0m     \u001b[38;5;66;03m# Ap = Ap@L(lambda_list[row-r-1]/M[r-1, r-1], row, r, n)\u001b[39;00m\n\u001b[1;32m     32\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m A\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 0 is out of bounds for axis 0 with size 0"
      ]
     }
    ],
@@ -430,19 +396,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 2\n",
-      "1 3\n",
-      "0 3\n",
-      "2 4\n",
-      "1 4\n",
-      "0 4\n",
       "(array([[1., 0., 0., 0.],\n",
       "       [0., 1., 0., 0.],\n",
       "       [0., 0., 1., 0.],\n",
@@ -450,27 +410,27 @@
       "       [0., 1., 0., 0.],\n",
       "       [0., 0., 1., 0.],\n",
       "       [0., 0., 0., 1.]]))\n",
-      "(array([[ 1. , -0.5,  0. ,  0. ],\n",
-      "       [ 0. ,  1. ,  0. ,  0. ],\n",
+      "(array([[ 1.  , -1.25,  0.  ,  0.  ],\n",
+      "       [ 0.  ,  1.  ,  0.  ,  0.  ],\n",
+      "       [ 0.  ,  0.  ,  1.  ,  0.  ],\n",
+      "       [ 0.  ,  0.  ,  0.  ,  1.  ]]), array([[1.  , 1.25, 0.  , 0.  ],\n",
+      "       [0.  , 1.  , 0.  , 0.  ],\n",
+      "       [0.  , 0.  , 1.  , 0.  ],\n",
+      "       [0.  , 0.  , 0.  , 1.  ]]))\n",
+      "(array([[ 1. ,  0. , -1. ,  0. ],\n",
+      "       [ 0. ,  1. , -1.6,  0. ],\n",
       "       [ 0. ,  0. ,  1. ,  0. ],\n",
-      "       [ 0. ,  0. ,  0. ,  1. ]]), array([[1. , 0.5, 0. , 0. ],\n",
-      "       [0. , 1. , 0. , 0. ],\n",
+      "       [ 0. ,  0. ,  0. ,  1. ]]), array([[1. , 0. , 1. , 0. ],\n",
+      "       [0. , 1. , 1.6, 0. ],\n",
       "       [0. , 0. , 1. , 0. ],\n",
       "       [0. , 0. , 0. , 1. ]]))\n",
-      "(array([[ 1.        ,  0.        , -1.14285714,  0.        ],\n",
-      "       [ 0.        ,  1.        , -0.57142857,  0.        ],\n",
-      "       [ 0.        ,  0.        ,  1.        ,  0.        ],\n",
-      "       [ 0.        ,  0.        ,  0.        ,  1.        ]]), array([[1.        , 0.        , 1.14285714, 0.        ],\n",
-      "       [0.        , 1.        , 0.57142857, 0.        ],\n",
-      "       [0.        , 0.        , 1.        , 0.        ],\n",
-      "       [0.        , 0.        , 0.        , 1.        ]]))\n",
-      "(array([[ 1.,  0.,  0., -9.],\n",
-      "       [ 0.,  1.,  0., -1.],\n",
-      "       [ 0.,  0.,  1., -2.],\n",
-      "       [ 0.,  0.,  0.,  1.]]), array([[1., 0., 0., 9.],\n",
-      "       [0., 1., 0., 1.],\n",
-      "       [0., 0., 1., 2.],\n",
-      "       [0., 0., 0., 1.]]))\n"
+      "(array([[ 1.  ,  0.  ,  0.  , -0.5 ],\n",
+      "       [ 0.  ,  1.  ,  0.  , -0.75],\n",
+      "       [ 0.  ,  0.  ,  1.  , -0.75],\n",
+      "       [ 0.  ,  0.  ,  0.  ,  1.  ]]), array([[1.  , 0.  , 0.  , 0.5 ],\n",
+      "       [0.  , 1.  , 0.  , 0.75],\n",
+      "       [0.  , 0.  , 1.  , 0.75],\n",
+      "       [0.  , 0.  , 0.  , 1.  ]]))\n"
      ]
     }
    ],
@@ -490,37 +450,6 @@
     "for muk in  Muk :\n",
     "    print(muk)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[3 2 8 9]\n",
-      " [8 4 4 1]\n",
-      " [9 2 7 2]\n",
-      " [2 4 1 1]]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([8, 4])"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(A)\n",
-    "A[:r-1, r-1]"
-   ]
   }
  ],
  "metadata": {
@@ -539,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
